hides the scrollbar fixing the width change error

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,32 +1,31 @@
-@import '../../style/variables.scss';
-
+@import "../../style/variables.scss";
 
 .container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: 100%;
-    height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	overflow-x: hidden;
+	width: 100%;
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 .App {
-    background: #fff;
-    position: absolute;
-    top:0;
-    left: 0;
-    right: 0;
-    transition: $transition;
-    min-height: 100%;
+	background: #fff;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	transition: $transition;
+	min-height: 100%;
 }
 
 .slided {
-    top: 91px;
-    left: 262px;
-    right: -262px;
-    border-radius: 20px;
-    box-shadow: $shadow;
+	top: 91px;
+	left: 262px;
+	right: -262px;
+	border-radius: 20px;
+	box-shadow: $shadow;
 }
-
